--- a/.github/workflows/hosna.yml
+++ b/.github/workflows/hosna.yml
@@ -19,6 +19,9 @@ jobs:
       with:
         channel: 'stable'
         architecture: x64
+    - run: flutter config --enable-macos-desktop
+    - run: flutter config --enable-ios
+    - run: flutter create .
     - run: flutter pub get
     - run: flutter test
     - run: flutter build ios --release --no-codesign
