--- a/.github/workflows/hosna.yml
+++ b/.github/workflows/hosna.yml
@@ -21,7 +21,7 @@ jobs:
         architecture: x64
     - run: flutter config --enable-macos-desktop
     - run: flutter config --enable-ios
-    - run: flutter create .
+    - run: flutter doctor -v 
     - run: flutter pub get
     - run: flutter test
     - run: flutter build ios --release --no-codesign
